added featured section

--- a/index.html
+++ b/index.html
@@ -1,19 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea House</title>
     <!-- Daisy UI -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Tailwind -->
+    <!-- XxX -->
+
+    <!-- Tailwind Script -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
+    <!-- XxX -->
+
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/7826d62378.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- XxX -->
+
     <!-- Manrope Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- XxX -->
+
+    <!-- Main CSS Link -->
+    <link rel="stylesheet" href="/Styles/main.css" />
+    <!-- XxX -->
+  </head>
+  <body class="font-manrope">
+    <header class="container mx-auto">
+      <div>
+        <div class="hero">
+          <div class="hero-content flex-col lg:flex-row">
+            <div>
+              <h1 class="text-7xl font-extrabold">
+                It's good <br />
+                tea time at The <br />
+                Tea House
+              </h1>
+              <p class="py-6">
+                Tea and Botanical Solutions Supplier Give Optimum Satisfaction
+                To Your Taste Buds.
+              </p>
+              <button class="btn btn-primary">Get Started</button>
+            </div>
+            <div>
+              <img src="/assets/images/banner.png" class="max-w-sm" />
+              <!-- Rating Badge -->
+              <div
+                class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60"
+              >
+                <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                <div class="">
+                  <h3 class="text-3xl">5.00</h3>
+                  <p>Trust Pilot Ratings</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="container mx-auto">
+      <!-- Featured Section Start -->
+      <section class="text-center my-28">
+        <h3 class="text-5xl font-extrabold mb-5">Our Featured Products</h3>
+        <p class="lg:max-w-3xl mb-10 mx-auto">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+
+        <!-- Featured Tea Card Container Start -->
+        <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4">
+          <!-- First  Tea Card -->
+          <div
+            class="card p-8 bg-gradient-to-r from-[#f4f4f4] to-[#F4F4F4] shadow-xl"
+          >
+            <figure><img src="/assets/images/tea-1.png" alt="Shoes" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- Second  Tea Card -->
+          <div
+            class="card p-8 bg-gradient-to-r from-[#f4f4f4] to-[#F4F4F4] shadow-xl"
+          >
+            <figure><img src="/assets/images/tea-2.png" alt="Shoes" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Black Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- Third  Tea Card -->
+          <div
+            class="card p-8 bg-gradient-to-r from-[#f4f4f4] to-[#F4F4F4] shadow-xl"
+          >
+            <figure><img src="/assets/images/tea-3.png" alt="Shoes" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Lemon Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- Forth  Tea Card -->
+          <div
+            class="card p-8 bg-gradient-to-r from-[#f4f4f4] to-[#F4F4F4] shadow-xl"
+          >
+            <figure><img src="/assets/images/tea-4.png" alt="Shoes" /></figure>
+            <div class="card-body text-center">
+              <h2 class="text-2xl font-bold">Green Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>
+        <!-- Featured Tea Card Container End -->
+      </section>
+      <!-- Featured Section End -->
+
+      <!-- Great Tea Section Start -->
+      <section class="my-28 flex gap-12 flex-col lg:flex-row flex-1">
+        <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
+          <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+
+          <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center">
+            <img src="/assets/images/fresh-1.png" alt="" />
+          </div>
+          <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 py-12 flex justify-center ">
+            <img src="/assets/images/fresh-2.png" alt="" />
+          </div>
+          <div class="rounded-xl h-36 bg-gradient-to-r from-[#d9d9d9] to-[#FFFFFF]"></div>
+        </div>
+        <div class="space-y-5 flex-1">
+          <h3 class="text-3xl font-extrabold">
+            Great Tea, Freshly
+            <br />
+            Presented
+          </h3>
+          <p>
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
+          </p>
+          <h4 class="text-xl font-extrabold">Unique Taste</h4>
+          <p>
+            A Unique and different style from other teapots gives a luxurious
+            and minimalist impression
+          </p>
+          <h4 class="text-xl font-extrabold">Premium Quality</h4>
+          <p>
+            Premium Quality that makes tea more elegant and more durable when
+            you use it.
+          </p>
+        </div>
+      </section>
+      <!-- Great Tea Section End -->
+    </main>
+    <footer></footer>
+  </body>
 </html>
